--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
   </head>
 
   <body>
-    <p class="flash"><%= flash.notice %></p>
+    <p class="flash">
+      <%= flash.notice %>
+    </p>
     <%= yield %>
+    
   </body>
 </html>
